# openfisca-france

./: .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mailmap  .pre-commit-config.yaml  .travis.yml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NAMING_GUIDELINES.md  Notes_param_al.md  Procfile  README.md  README.rst  __init__.py  app.py  check-version-bump.sh  chemins_trop_longs.txt  circle.yml  cotsoc_virtual.yaml  deploy-api.enc  deploy-if-version-bump.sh  docker-compose.yml  index.html  logs.txt  openfisca_bot.enc  pat_children_reel_avant_processing.yaml  pat_reel_avant_processing.yaml  pat_sal_master_f59d01ec9.txt  pat_structure.json  pat_structure.yaml  pat_virtual.yaml  performance_graph.html  pyproject.toml  release-tag.sh  release.sh  (+27 more)
.circleci/: .test-durations  are-yaml-files-properly-formatted.sh  config.yml  detect-functional-changes.sh  has-functional-changes.sh  is-version-number-acceptable.sh  lint-changed-python-files.sh  lint-changed-yaml-tests.sh  publish-git-tag.sh  publish-python-package.sh  untitled.yaml
.conda/: LICENSE.AGPL.txt  README.md  conda_build_config.yaml  meta.yaml  recipe.yaml  variants.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_test_new_core_version.md  check-api-version.py  dependabot.yml  get_latest_core_version.py  get_minimal_version.py  get_pypi_info.py  get_version.py  has-functional-changes.sh  has-parameters-tree-changes.sh  is-version-number-acceptable.sh  lint-changed-yaml-parameters.sh  lint-changed-yaml-tests.sh  publish-git-tag.sh  pyproject_version.py  split-tests.sh  split_tests.py  test-api.py  test-api.sh  test.yml
.github/linters/: setup.cfg
.github/workflows/: _before.yaml  _lint.yaml  _test.yaml  _test_yaml.yaml  leximpact.yml  merge.yaml  publish-to-conda.yml  push.yaml  test_new_core_version.yml  validate_yaml.yml  workflow.yml
CI-scripts/: lint-changed-python-files.sh
castypes/: 2005 - Celibataire - 1smic.ofct  2007 - Celibataire - 1smic.ofct  2010 - Celibataire - 1smic.ofct  2010 - Couple - 2smic - 0smic.ofct  2010 - Couple 3 enfants.ofct  cas2.ofct  famille 4 enfants.ofct  isfavecplusvalue.ofct  ps cas 1.ofct  ps cas 2.ofct  ps cas 3.ofct  ps cas 4.ofct  ps cas 6.ofct  sans-titre.ofct  test ASI .ofct
ci-scripts/: has-functional-changes.sh  split-tests.sh  test-api.sh
data/: calage_men.csv  calage_men_old.csv  calage_pfam.csv  fichiertest.h5  inflate.csv  sparse_test.py  survey_psl.h5  test_hd5.py  zone_apl.csv
data/erf/: aggregates.py  datatable.py
data/sources/: AMFd4.xls  IRPP_PPE.xlsx  actualisation_groups.xls  build_aggregates_from_sources.py  build_from_sources.py  build_survey_from_sources.py  configREMOVEMEWHENCONFIGURED.py  cotisations_RegimeGeneral.xlsx  cotisations_TousRegimes.xlsx  logement_caf.xlsx  logement_tous_regime.xlsx  minima_sociaux_caf.xlsx  minima_sociaux_tous_regimes.xlsx  openfisca_pfam_tous_regimes.xlsx  pfam_caf.xlsx  pfam_tous_regimes.xlsx  sd2010_t6_fm.xls  utils.py
data/zone_apl/: zone_apl_2006.csv  zone_apl_imputation_data.csv
decompositions/: decomp.xml  decomp_contrib.xml
docker/python/: Dockerfile  start.sh
model/: calage.py  common.py  cotsoc.py  data.py  irpp.py  irpp_charges_deductibles.py  irpp_credits_impots.py  irpp_plus_values_immo.py  irpp_reductions_impots.py  isf.py  lgtm.py  mini.py  model.py  pfam.py  th.py
notebooks/: README.md  getting-started-Copy1.ipynb  getting-started.ipynb  getting-started.py  how_to_handle_periods.ipynb  visualizations.ipynb
openfisca_france/: XL.py  __init__.py  check_longueur_chemins.py  conv.py  entities.py  formulas.py  france_taxbenefitsystem.py  parameters.pickle  print_pat_and_sal.py  scenarios.py  simulations.py  surveys.py  units.yaml  utils.py  version.py
openfisca_france/assets/: holidays.py  ppa.xml
openfisca_france/calibrations/: calib_2006.csv
openfisca_france/castypes/: 2006 - Celibataire - 1smic.ofct  2008 - Celibataire - 1smic.ofct  2009 - Celibataire - 1smic.ofct  2010 - Celibataire - 2smic.ofct  2010 - Couple - 1smic - 0smic.ofct  2010 - Couple - 1smic - 1smic.ofct  2010 - Couple 3 enfants (bas ages) .ofct  2010 - Couple 3 enfants (garde d'enfant).ofct
openfisca_france/conf/: cache_blacklist.py
openfisca_france/data/: codeAplReader.py  code_apl  sparse_test.py  survey_psl.h5  test_hd5.py  totals_pfam.csv
openfisca_france/decompositions/: __init__.py  decomp.xml  decomp_contrib.xml  decomp_prestations.xml  decompositions-multiples.xml  fiche_de_paie_decomposition.xml
openfisca_france/extensions/: README.md
openfisca_france/i18n/: openfisca-france.pot
openfisca_france/model/: __init__.py  aides_logement.py  base.py  calage.py  cmu.py  common.py  cotsoc.py  covid19.py  crous.py  data.py  data_laurence.py  data_laurence2.py  datatrees.py  decomposition.yaml  education.py  inversion_revenus.py  irpp.py  irpp_charges_deductibles.py  irpp_credits_impots.py  irpp_plus_values_immo.py  (+11 more)
param/: __init__.py  param.xml
performance_tests/: test_perf_circleci.py  test_perf_tests.py
reformes/: Allocations familiales imposables.ofp  gelbareme2011.ofp  reforme2012.ofp
tests/: al_base_resources.yml  allegement_fillon.yaml  base.py  base_IPP_input_celib_prive_cadre_2013_14-02.dta  cache.py  comparator.py  core_tests.py  correspondances_variables.xlsx  cotisations_sociales_simulateur_IPP.yaml  deductions_salaire.yaml  init_country_options_test.py  legislation_tests.py  ludwig_test_1575358087916.yaml  ludwig_test_1576234486014.yaml  test_allegement_fillon.py  test_allegements.py  test_api.py  test_basics.py  test_brut_to_imposable.py  test_coefficient.py  test_conda_version.py  test_cotsoc.py  test_cotsoc_fonc.py  test_cotsoc_public.py  test_cotsoc_sal_cap.py  test_decomposition.py  test_decomposition_fiches_de_paie.py  test_decompositions.py  test_entities.py  test_from_taxipp.py  test_hauts_revenus.py  test_irpp.py  test_irpp1.py  test_legacy_entities.py  test_legislations.py  test_metadata.py  test_nb_enfants.py  test_niches.py  test_opt_out_cache.py  test_parameters.py  (+12 more)
widgets/: Composition.py  InfoIndiv.py  __init__.py
(+25582 files in other folders)
