[project]
name = "OpenFisca-France"
version = "169.1.0"
description = "OpenFisca Rules as Code model for France."
readme = "README.md"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code", "france"]
authors = [
  {name = "OpenFisca Team", email = "contact@openfisca.fr"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">= 3.9"
dependencies = [
    "numpy >=1.24.3, <2",
    "openfisca-core[web-api] >=43, <44"
]

[project.urls]
Homepage = "https://github.com/openfisca/openfisca-france"
Repository = "https://github.com/openfisca/openfisca-france"
Documentation = "https://openfisca.org/doc"
Issues = "https://github.com/openfisca/openfisca-france/issues"
Changelog = "https://github.com/openfisca/openfisca-france/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["openfisca_france"]
exclude = ["openfisca_france/assets/taxe_habitation/source"]

[project.optional-dependencies]
dev = [
    "autopep8 >=2.0.2, <3.0",
    "flake8 >=6.0.0, <7.0.0",
    "flake8-print >=5.0.0, <6.0.0",
    "flake8-quotes >=3.3.2",
    "pytest >=7.2.2, <8.0",
    "scipy >=1.10.1, <2.0",
    "requests >=2.28.2, <3.0",
    "yamllint >=1.30.0, <2.0"
]
inversion_revenus = [
    "scipy >=1.10.1, <2.0",
]
de_net_a_brut = [
    "scipy >=1.10.1, <2.0",
]
taxipp = [
    "pandas >=1.5.3, <2.0",
]
casd-dev = [
    # Same as dev with packages not available at CASD removed
    "autopep8 >=2.0.2, <3.0",
    "pytest >=7.2.2, <8.0",
    "requests >=2.28.2, <3.0",
    "scipy >=1.10.1, <2.0",  # Only used to test de_net_a_brut reform
]

[tool.pytest.ini_options]
addopts = "--showlocals --doctest-modules"
testpaths = [ "openfisca_country_template/tests" ]
python_files = "**/*.py"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning'
]

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "no-self-argument",
    "invalid-enum-extension",
    "no-member",
    "not-callable",
    "duplicate-code",
    "too-many-locals",
    "fixme",
    "unused-argument",
    "redefined-outer-name"
]
score = "no"

[tool.isort]
case_sensitive = "true"
force_alphabetical_sort_within_sections = "false"
group_by_package = "true"
include_trailing_comma = "true"
multi_line_output = "8"
py_version = "39"
known_first_party = "openfisca_country_template"
known_openfisca = [
    "openfisca_core",
    "openfisca_country_template"
]
known_typing = [
    "mypy*", 
    "*types*", 
    "*typing*"
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "OPENFISCA",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
